@@ -9,6 +9,8 @@ It was preventing the help option to reach the commands.
 * Introduce `opt.HelpSynopsisArgs(string)` method to allow overriding the default args description.
 The current default description is `[<args>]`.
 
+* Make `SetMode`, `SetUnknownMode`, `SetRequireOrder` and `SetMapKeysToLower` chainable.
+
 == v0.15.0 Feature release
 
 As the releases before, this release has 100% test coverage.
